crates/forge/tests/e2e/snapshots/gas_report/main__e2e__gas_report__snap_basic@2.20.0.snap
---
source: crates/forge/tests/e2e/gas_report.rs
expression: stdout
---



[PASS] simple_package_integrationtest::contract::call_and_invoke (l1_gas: ~0, l1_data_gas: ~192, l2_gas: ~1005580)
╭------------------------+-------+-------+-------+---------+---------╮
| HelloStarknet Contract |       |       |       |         |         |
+====================================================================+
| Function Name          | Min   | Max   | Avg   | Std Dev | # Calls |
|------------------------+-------+-------+-------+---------+---------|
| get_balance            | 26640 | 26640 | 26640 | 0       | 2       |
|------------------------+-------+-------+-------+---------+---------|
| increase_balance       | 88210 | 88210 | 88210 | 0       | 1       |
╰------------------------+-------+-------+-------+---------+---------╯
