crates/forge/tests/e2e/snapshots/gas_report/main__e2e__gas_report__snap_fork@2.14.0.snap
---
source: crates/forge/tests/e2e/gas_report.rs
expression: stdout
---
[PASS] forking::tests::test_track_resources (l1_gas: ~0, l1_data_gas: ~320, l2_gas: ~508160)
╭---------------------------+-------+-------+-------+---------+---------╮
| forked contract           |       |       |       |         |         |
| (class hash: 0x06a7…1550) |       |       |       |         |         |
+=======================================================================+
| Function Name             | Min   | Max   | Avg   | Std Dev | # Calls |
|---------------------------+-------+-------+-------+---------+---------|
| get_balance               | 40000 | 40000 | 40000 | 0       | 1       |
|---------------------------+-------+-------+-------+---------+---------|
| increase_balance          | 40000 | 40000 | 40000 | 0       | 1       |
╰---------------------------+-------+-------+-------+---------+---------╯

╭---------------------------+-------+-------+-------+---------+---------╮
| forked contract           |       |       |       |         |         |
| (class hash: 0x07aa…af4b) |       |       |       |         |         |
+=======================================================================+
| Function Name             | Min   | Max   | Avg   | Std Dev | # Calls |
|---------------------------+-------+-------+-------+---------+---------|
| get_balance               | 13840 | 13840 | 13840 | 0       | 1       |
|---------------------------+-------+-------+-------+---------+---------|
| increase_balance          | 25840 | 25840 | 25840 | 0       | 1       |
╰---------------------------+-------+-------+-------+---------+---------╯
