crates/forge/tests/e2e/snapshots/gas_report/main__e2e__gas_report__snap_fork@2.21.0.snap
---
source: crates/forge/tests/e2e/gas_report.rs
expression: stdout
---


[PASS] forking::tests::test_track_resources (l1_gas: ~0, l1_data_gas: ~320, l2_gas: ~1461740)
╭---------------------------+--------+--------+--------+---------+---------╮
| forked contract           |        |        |        |         |         |
| (class hash: 0x06a7…1550) |        |        |        |         |         |
+==========================================================================+
| Function Name             | Min    | Max    | Avg    | Std Dev | # Calls |
|---------------------------+--------+--------+--------+---------+---------|
| get_balance               | 40000  | 40000  | 40000  | 0       | 1       |
|---------------------------+--------+--------+--------+---------+---------|
| increase_balance          | 120000 | 120000 | 120000 | 0       | 1       |
╰---------------------------+--------+--------+--------+---------+---------╯

╭---------------------------+-------+-------+-------+---------+---------╮
| forked contract           |       |       |       |         |         |
| (class hash: 0x07aa…af4b) |       |       |       |         |         |
+=======================================================================+
| Function Name             | Min   | Max   | Avg   | Std Dev | # Calls |
|---------------------------+-------+-------+-------+---------+---------|
| get_balance               | 27910 | 27910 | 27910 | 0       | 1       |
|---------------------------+-------+-------+-------+---------+---------|
| increase_balance          | 89880 | 89880 | 89880 | 0       | 1       |
╰---------------------------+-------+-------+-------+---------+---------╯
